<resources>
    <string name="app_name">Easypick</string>
    <string name="cambiar_fragment">Cambiar a fragment</string>
    <string name="cambiar_fragment2">Cambiar a fragment 2</string>
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_name">logo</string>
    <string name="logo_titulo">Realiza toda compra desde aqui...</string>
    <string name="ingresar">Ingresar</string>
    <string name="btn_principal">Entrar</string>
    <string name="pedidos">pedidos</string>
    <string name="perfil">Perfil</string>
    <string name="pagos">pagos</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="usuario">Jose Perez</string>
    <string name="mail">jose.perez@gmail.com</string>
    <string name="pedido_menu">Pedidos</string>
    <string name="Pagos">Pagos</string>
    <string name="Config_menu">Configuración</string>
    <string name="nav_alert">Avisos</string>
    <string name="nav_session">Cerrar Sesión</string>
    <string name="cam_texto">Escaneé el código QR para conocer la carta del local</string>
    <string name="cam_locales">Locales disponibles</string>
    <string name="pagar">Confirmar Pago</string>
    <string name="nombre">Nombre y Apellido Del titular</string>
    <string name="numero_tarjeta">Número de tarjeta</string>
    <string name="cod_seguridad">Cód. de Seguridad</string>
    <string name="fecha_vencimiento">Fecha de Vencimiento</string>
    <string name="btn_next">Siguiente</string>


    <string name="facebook_app_id">859561854518896</string>
    <string name="fb_login_protocol_scheme">fb859561854518896</string>
    <string name="mp_public_key">TEST-21b07bb4-b9db-4bc9-beb9-0660b96b97a7</string>
    <string name="continuar_fb">Continuar con Facebook</string>
    <string name="sign_out">Cerrar sesion</string>
    <string name="loading">Cargando</string>
    <string name="signed_out">Desconectado</string>
    <string name="profile_title_text">Perfil</string>
    <string name="conectado_como">Conectado como %1s (%2s)</string>
    <string name="costo">Costo: $%1s</string>
    <string name="costo_solo">$%1s</string>
    <string name="orden_id">N° de orden: %1s</string>
    <string name="comida">comida</string>
    <string name="auth_text">Estas a un paso de tu comida</string>
    <string name="resumen_de_la_orden">Resumen de la orden</string>
    <string name="descripcion">descripcion</string>
    <string name="precio">precio</string>
    <string name="mis_ordenes">Mis ordenes</string>
    <string name="estimated">Tiempo estimado: %1s min</string>
    <string name="no_orders">No tenes ordenes todavia</string>
</resources>
