<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.easypick.easypick.fragments.ProfileFragment">
    <LinearLayout
        android:id="@+id/loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loginTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/fragment_title"
            android:text="@string/profile_title_text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/facebook_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/loginInfo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/fragment_info"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/signed_out" />
        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="@string/continuar_fb"
            android:id="@+id/buttonLoginWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/facebook_icon"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>