<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/browser_actions_bg_grey"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iProducto"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:contentDescription="@string/comida"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hambur" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="172dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/descripcion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toEndOf="@+id/iProducto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/precio"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toEndOf="@+id/iProducto"
            app:layout_constraintTop_toBottomOf="@+id/descripcion" />

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:drawableBottom="@drawable/ic_action_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>